--- a/cpu/config/config.json
+++ b/cpu/config/config.json
@@ -1,5 +1,7 @@
 {
   "port": 8003,
+  "ip_kernel": "127.0.0.1",
+  "port_kernel": 8001,
   "ip_memory": "127.0.0.1",
   "port_memory": 8002,
   "number_felling_tlb": 32,
