subo pseudo MMU y memoria fixeada

--- a/cpu/config/config.json
+++ b/cpu/config/config.json
@@ -5,5 +5,6 @@
   "ip_memory": "127.0.0.1",
   "port_memory": 8002,
   "number_felling_tlb": 32,
-  "algorithm_tlb": "FIFO"
+  "algorithm_tlb": "FIFO",
+  "page_size":16
 }
