--- a/kernel/config/config.json
+++ b/kernel/config/config.json
@@ -5,8 +5,8 @@
   "ip_cpu": "127.0.0.1",
   "port_cpu": 8003,
   "ip_io": "127.0.0.1",
-  "planning_algorithm": "FIFO",
-  "quantum": 2000,
+  "planning_algorithm": "Round Robin",
+  "quantum": 10000,
   "resources": ["RA", "RB", "RC"],
   "resource_instances": [1, 2, 1],
   "multiprogramming": 10
