--- a/entradasalida/config/config2.json
+++ b/entradasalida/config/config2.json
@@ -1,6 +1,6 @@
 {
     "port": 8006,
-    "type": "GENERIC",
+    "type": "GEN",
     "unit_work_time": 250,
     "ip_kernel": "127.0.0.1",
     "port_kernel": 8001,
