--- a/entradasalida/config/config1.json
+++ b/entradasalida/config/config1.json
@@ -1,6 +1,6 @@
 {
   "port": 8005,
-  "type": "STDIN",
+  "type": "GEN",
   "unit_work_time": 250,
   "ip_kernel": "127.0.0.1",
   "port_kernel": 8001,
