--- a/kernel/config/config.json
+++ b/kernel/config/config.json
@@ -5,7 +5,7 @@
   "ip_cpu": "127.0.0.1",
   "port_cpu": 8003,
   "ip_io": "127.0.0.1",
-  "planning_algorithm": "VRR",
+  "planning_algorithm": "RR",
   "quantum": 5000,
   "resources": ["RA", "RB", "RC"],
   "resource_instances": [1, 2, 1],
