--- a/.gitignore
+++ b/.gitignore
@@ -18,4 +18,7 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
+# Filesystems bitmaps and blocks
+*.dat
+
 .vscode
