--- a/entradasalida/config/config_fs.json
+++ b/entradasalida/config/config_fs.json
@@ -8,5 +8,6 @@
   "port_memory": 8002,
   "dialfs_path": "/home/utnso/tp-2024-1c-sudoers/entradasalida",
   "dialfs_block_size": 16,
-  "dialfs_block_count": 32
+  "dialfs_block_count": 32,
+  "compaction_delay": 7500
 }
