--- a/entradasalida/config/config_io_generica.json
+++ b/entradasalida/config/config_io_generica.json
@@ -8,5 +8,6 @@
   "port_memory": 8002,
   "dialfs_path": "/home/utnso/dialfs",
   "dialfs_block_size": 64,
-  "dialfs_block_count": 1024
+  "dialfs_block_count": 1024,
+  "compaction_delay": 7500
 }
